--- a/web/src/app/admin/company-list.component.html
+++ b/web/src/app/admin/company-list.component.html
@@ -23,9 +23,7 @@
                                         <option [ngValue]="250">Show 250Row</option>
                                         <option [ngValue]="500">Show 500 Row</option>
                                     </select>
-                                    
                                 </div>
-                                
                                 <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
                                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                         ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
@@ -38,14 +36,45 @@
                                         <input   placeholder="Search" [(ngModel)]="term" #searching  mdbInput type="search" id="form1" class="form-control" />
                                     </div>
                                 </div>
-                                <div class="col-md-1 col-1" style="width: 50px">
-                                    <mat-icon class="col-white plus_icon" [routerLink]="['/admin/company',0]"
-                                        style="float: right;"> add</mat-icon>
+                                <div class="col-md-1 col-1" style="width: 70px;padding: 0;">
+                                    <mat-icon class="col-white plus_icon me-1" [routerLink]="['/admin/company',0]" > add</mat-icon>
+                                     <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View" style="font-size: 22px;padding: 4px;">grid_on</mat-icon>                                     
                                 </div>
                             </div>
                         </div>
 
-                        <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
+                        <!-- Grid View start -->
+                        <div class="row mt-5 mt-md-4" *ngIf="dataList?.length !== 0 && !gridview" style="overflow:auto;height:530px;">
+                            <div class="col-md-3" *ngFor="let data of dataList let i = index;">
+                                <div class="course-card" style="height: 28rem;">
+                                    <div class="course-card-body">
+                                        <div class="course-card-top-overflow text-white">
+                                            <img [src]="data.LogoURL" alt="Image"  class="mx-auto d-block cardImg" />
+                                        </div>
+                                        <h2 class="text-center m-0">{{data.Name}}</h2>
+                                        <p class="text-center m-0">{{data.OwnerName}}</p>
+                                        <p class="text-center m-0">{{data.MobileNo1}}</p>
+                                        <p class="text-center m-0">{{data.Email}}</p>
+                                        <p class="text-center m-0">{{data.CancellationDate }}</p>
+                                       
+                                        <div class="text-center mb-3 mt-2">
+                                            <mat-icon class="sync_disabled me-1" title="Deactive" (click)="deactive(i)">sync_disabled</mat-icon>
+                                                <mat-icon class="swap_icon me-1" title="companylogin" (click)="companylogin(i)">swap_vert</mat-icon>
+                                                <i class="fas fa-info-circle" title="Edit"
+                                                    style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
+                                                    [routerLink]="['/admin/company',data.ID]" >
+                                                </i>
+                                                <mat-icon class="delete_icon ms-1" title="Delete" (click)="deleteItem(i)">delete_forever</mat-icon>
+                                               
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Grid View end -->
+
+                        <!-- company list start -->
+                        <div *ngIf="gridview" class="row mt-md-2 mt-5 p-md-2 p-3 ">
                             <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive">
                                 <table style="width:100%;" id="exportsss"
                                     class="table table-striped table-hover table-sm table-bordered"
@@ -77,12 +106,7 @@
                                                     [routerLink]="['/admin/company',data.ID]" >
                                                 </i>
                                                 <mat-icon class="delete_icon ms-1" title="Delete" (click)="deleteItem(i)">delete_forever</mat-icon>
-                                                <!-- <i class="fa fa-trash"
-                                                    style="color: rgb(250, 0, 0);
-                                                    font-size: 15px;
-                                                    cursor: pointer; "
-                                                    (click)="deleteItem(i)" title="delete">
-                                                </i> -->
+                                               
                                             </td>
                                             <td class="text-left">{{ dataList.length - i }}</td>
                                             <td class="text-left">{{data.Name}}</td>
@@ -102,6 +126,7 @@
                             </div>
 
                         </div>
+                        <!-- company list end -->
                     </div>
                 </div>
             </div>
