--- a/web/src/app/admin/empolyee-list/empolyee-list.component.html
+++ b/web/src/app/admin/empolyee-list/empolyee-list.component.html
@@ -10,41 +10,64 @@
                   <h2>Employee List </h2>
                 </div>
                 <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
-                  <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button" (click)="exportAsXLSX()"></i>
-              </div>
-                <div  class="col-md-1 col-1 ps-md-0 ps-1">
-                    <select class=" form-control"
-                        style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
-                        [(ngModel)]="itemsPerPage" (change)="getList();">
-                        <option [ngValue]="10">Show 10 Row</option>
-                        <option [ngValue]="25">Show 25 Row</option>
-                        <option [ngValue]="50">Show 50 Row</option>
-                        <option [ngValue]="100">Show 100 Row</option>
-                        <option [ngValue]="250">Show 250Row</option>
-                        <option [ngValue]="500">Show 500 Row</option>
-                    </select>
+                  <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                    (click)="exportAsXLSX()"></i>
                 </div>
-                <div  class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
-                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
-                        ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
-                        [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
-                        [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
-                    </ngb-pagination>
+                <div class="col-md-1 col-1 ps-md-0 ps-1">
+                  <select class=" form-control"
+                    style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                    [(ngModel)]="itemsPerPage" (change)="getList();">
+                    <option [ngValue]="10">Show 10 Row</option>
+                    <option [ngValue]="25">Show 25 Row</option>
+                    <option [ngValue]="50">Show 50 Row</option>
+                    <option [ngValue]="100">Show 100 Row</option>
+                    <option [ngValue]="250">Show 250Row</option>
+                    <option [ngValue]="500">Show 500 Row</option>
+                  </select>
+                </div>
+                <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                  <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                    [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                    (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                  </ngb-pagination>
                 </div>
                 <div class="col-md-2 col-4 ms-auto">
-                        <div class="input-group">
-                            <input   placeholder="Search" [(ngModel)]="term" #searching  mdbInput type="search" id="form1" class="form-control" />
-                        </div>
+                  <div class="input-group">
+                    <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
+                      class="form-control" />
+                  </div>
                 </div>
-                <div class="col-md-1 col-1" style="width: 50px">
-                      <mat-icon  class="col-white plus_icon" [routerLink]="['/admin/employee',0]"
-                      style="float: right;"> add</mat-icon>
-          </div>
+                <div class="col-md-1 col-1" style="width: 70px;padding: 0;">
+                  <mat-icon class="col-white plus_icon me-1" [routerLink]="['/admin/employee',0]"> add</mat-icon>
+                  <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View"
+                    style="font-size: 22px;padding: 4px;">grid_on</mat-icon>
+                </div>
+              </div>
             </div>
-             
+            <!-- Grid View start -->
+            <div class="row mt-2 p-2" *ngIf="dataList?.length !== 0 && !gridview" style="overflow:auto;height:530px; ">
+              <div class="col-md-3" *ngFor="let data of dataList let i = index;">
+                <div class="course-card" style="height: 28rem;">
+                  <div class="course-card-body">
+                    <div class="course-card-top-overflow text-white">
+                      <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block cardImg" />
+                    </div>
+                    <h2 class="text-center m-0">{{data.Name}}</h2>
+                    <p class="text-center m-0">{{data.MobileNo1}}</p>
+                    <p class="text-center m-0">{{data.Email}}</p>
+                    <p class="text-center m-0 cardAddress">{{data.Address }}</p>
+                    <div class="text-center mb-3">
+                      <mat-icon class="edit_icon ms-1" [routerLink]="['/admin/employee',data.ID]">edit</mat-icon>
+                      <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
+            <!-- Grid View end -->
+            <!-- table list start -->
             <div class="body mt-md-1 mt-5 p-2">
-              <div class="row">
+              <div class="row" *ngIf="gridview">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                   <div class="table-responsive">
                     <table class="table table-striped table-hover table-sm table-bordered"
@@ -71,10 +94,9 @@
                         <tr class="text-center" *ngFor="let data of dataList let i = index;"
                           style="white-space: nowrap;">
                           <td style="width: 7%;" class="detail_icon">
-                            <i class="fas fa-info-circle" 
-                             data-mdb-toggle="modal" 
-                            data-mdb-target="#exampleModal"  (click)="openModal(content,data.ID)">
-                        </i>
+                            <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal"
+                              (click)="openModal(content,data.ID)">
+                            </i>
                             <mat-icon class="edit_icon ms-1" [routerLink]="['/admin/employee',data.ID]">edit</mat-icon>
                             <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                           </td>
@@ -98,6 +120,7 @@
                 </div>
               </div>
             </div>
+            <!-- table list end -->
           </div>
         </div>
       </div>
@@ -105,42 +128,45 @@
   </div>
 </section>
 
-  <!-- Modal -->
-  <ng-template #content role="document" let-modal>
-    <div class="modal-header" style="height: 50px;">
-      <h3 class="modal-title header pt-2" id="exampleModalLabel">Employee Update Password</h3>
-      <button type="button" class="btn-close" aria-hidden="true"
-        (click)="modal.dismiss('Cross click')"></button>
-    </div>
-    <div class="modal-body">
-        <form #f="ngForm">
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-xl-10 col-lg-10 col-md-8 col-sm-12 mb-0 mx-auto" >
-                        <mat-form-field class="example-full-width mb-0">
-                            <mat-label>Enter Password</mat-label>
-                            <input #x type="password" matInput name="Password" [(ngModel)]="data.Password" required #Passwordcontrol  >
-                            <mat-icon *ngIf="data.Password !== ''" style="color: #ff5100;cursor: pointer;" (click)="x.type = x.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
-                            <mat-error>
-                                Password is required
-                            </mat-error>
-                        </mat-form-field>
-                    </div>
-                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 mb-0 mx-auto" >
-                      <mat-form-field class="example-full-width mb-0">
-                          <mat-label>Confirm Password</mat-label>
-                          <input #y matInput type="password"  name="ConfirmPassword" [(ngModel)]="ConfirmPassword" required #ConfirmPasswordcontrol  >
-                          <mat-icon *ngIf="data.Password !== ''" style="color: #ff5100;cursor: pointer;" (click)="y.type = y.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
-                          <mat-error>
-                              Confirm Password is required
-                          </mat-error>
-                      </mat-form-field>
-                  </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" mat-raised-button color="primary" [disabled]="!f.valid" (click)="UpdatePassword()" >Update</button>
-            </div>
-        </form>
-    </div>
-  </ng-template>
+<!-- Modal -->
+<ng-template #content role="document" let-modal>
+  <div class="modal-header" style="height: 50px;">
+    <h3 class="modal-title header pt-2" id="exampleModalLabel">Employee Update Password</h3>
+    <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <form #f="ngForm">
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-xl-10 col-lg-10 col-md-8 col-sm-12 mb-0 mx-auto">
+            <mat-form-field class="example-full-width mb-0">
+              <mat-label>Enter Password</mat-label>
+              <input #x type="password" matInput name="Password" [(ngModel)]="data.Password" required #Passwordcontrol>
+              <mat-icon *ngIf="data.Password !== ''" style="color: #ff5100;cursor: pointer;"
+                (click)="x.type = x.type=='password'?'text':'password'" matSuffix>vpn_key</mat-icon>
+              <mat-error>
+                Password is required
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 mb-0 mx-auto">
+            <mat-form-field class="example-full-width mb-0">
+              <mat-label>Confirm Password</mat-label>
+              <input #y matInput type="password" name="ConfirmPassword" [(ngModel)]="ConfirmPassword" required
+                #ConfirmPasswordcontrol>
+              <mat-icon *ngIf="data.Password !== ''" style="color: #ff5100;cursor: pointer;"
+                (click)="y.type = y.type=='password'?'text':'password'" matSuffix>vpn_key</mat-icon>
+              <mat-error>
+                Confirm Password is required
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" mat-raised-button color="primary" [disabled]="!f.valid"
+          (click)="UpdatePassword()">Update</button>
+      </div>
+    </form>
+  </div>
+</ng-template>
