--- a/web/src/app/admin/user-update-password/user-update-password.component.html
+++ b/web/src/app/admin/user-update-password/user-update-password.component.html
@@ -30,12 +30,38 @@
                                     </ngb-pagination>
                                 </div>
                                 <div class="col-2 ms-auto">
-                                    
+                                    <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview"
+                                        title="Grid View" style="float: right;">grid_on</mat-icon>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
+                        <!-- Grid View start -->
+                        <div class="row mt-5 mt-md-4" *ngIf="dataList?.length !== 0 && !gridview"
+                            style="overflow:auto;height:530px;">
+                            <div class="col-md-3" *ngFor="let data of dataList let i = index;">
+                                <div class="course-card" style="height: 28rem;">
+                                    <div class="course-card-body">
+                                        <div class="course-card-top-overflow text-white">
+                                            <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block cardImg" />
+                                        </div>
+                                        <h2 class="text-center m-0">{{data.Name}}</h2>
+                                        <p class="text-center m-0">{{data.OwnerName}}</p>
+                                        <p class="text-center m-0">{{data.MobileNo1}}</p>
+                                        <p class="text-center m-0">{{data.Email}}</p>
+                                        <p class="text-center m-0">{{data.CancellationDate }}</p>
+                                        <div class="text-center mb-3 mt-2">
+                                            <button mat-raised-button color="primary"
+                                            (click)="openModal(content,data.ID)" >
+                                               Password Update
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Grid View end -->
+                        <!-- user list strat -->
+                        <div class="row mt-md-2 mt-5 p-md-2 p-3 " *ngIf="gridview">
                             <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive">
                                 <table style="width:100%;" id="exportsss"
                                     class="table table-striped table-hover table-sm table-bordered"
@@ -51,15 +77,15 @@
                                             <th class="text-left">Address</th>
                                             <th class="text-left">Branch</th>
                                             <th class="text-left">UserGroup</th>
-                                            
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr class="text-center" *ngFor="let data of dataList  ; let i = index;">
                                             <td>
                                                 <i class="fas fa-info-circle"
-                                                    style="color: rgb(23, 23, 194); font-size: 20px; cursor: pointer;"  data-mdb-toggle="modal" 
-                                                    data-mdb-target="#exampleModal"  (click)="openModal(content,data.ID)">
+                                                    style="color: rgb(23, 23, 194); font-size: 20px; cursor: pointer;"
+                                                    data-mdb-toggle="modal" data-mdb-target="#exampleModal"
+                                                    (click)="openModal(content,data.ID)">
                                                 </i>
                                             </td>
                                             <td class="text-left">{{dataList.length - i }}</td>
@@ -67,7 +93,7 @@
                                             <td class="text-left">{{data.MobileNo1 }}</td>
                                             <td class="text-left">{{data.MobileNo2}}</td>
                                             <td class="text-left">{{data.Email }}</td>
-                                            <td class="text-left w-25" >{{data.Address }}</td>
+                                            <td class="text-left w-25">{{data.Address }}</td>
                                             <td class="text-left">{{data.Branch}}</td>
                                             <td class="text-left">{{data.UserGroup}}</td>
                                         </tr>
@@ -75,43 +101,42 @@
                                 </table>
                             </div>
                         </div>
+                        <!-- user list end -->
                     </div>
                 </div>
             </div>
         </div>
-        
     </div>
-</section> 
-
-
-  
-  <!-- Modal -->
-  <ng-template #content role="document" let-modal>
+</section>
+<!-- Modal -->
+<ng-template #content role="document" let-modal>
     <div class="modal-header" style="height: 50px;">
-      <h2 class="modal-title header pt-2" id="exampleModalLabel">Update Password</h2>
-      <button type="button" class="btn-close" aria-hidden="true"
-        (click)="modal.dismiss('Cross click')"></button>
+        <h2 class="modal-title header pt-2" id="exampleModalLabel">Update Password</h2>
+        <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
         <form #f="ngForm">
             <div class="modal-body">
                 <div class="row">
-                   
-                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 mb-0 mx-auto" >
+                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 mb-0 mx-auto">
                         <mat-form-field class="example-full-width mb-0">
                             <mat-label>Enter Password</mat-label>
-                            <input #x matInput type="password"  name="Password" [(ngModel)]="data.Password" required #Passwordcontrol  >
-                            <mat-icon *ngIf="data.Password !== ''" style="color: #ff5100;cursor: pointer;" (click)="x.type = x.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
+                            <input #x matInput type="password" name="Password" [(ngModel)]="data.Password" required
+                                #Passwordcontrol>
+                            <mat-icon *ngIf="data.Password !== ''" style="color: #ff5100;cursor: pointer;"
+                                (click)="x.type = x.type=='password'?'text':'password'" matSuffix>vpn_key</mat-icon>
                             <mat-error>
                                 Password is required
                             </mat-error>
                         </mat-form-field>
                     </div>
-                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 mb-0 mx-auto" >
+                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 mb-0 mx-auto">
                         <mat-form-field class="example-full-width mb-0">
                             <mat-label>Confirm Password</mat-label>
-                            <input #y matInput type="password"  name="ConfirmPassword" [(ngModel)]="ConfirmPassword" required #ConfirmPasswordcontrol  >
-                            <mat-icon *ngIf="data.Password !== ''" style="color: #ff5100;cursor: pointer;" (click)="y.type = y.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
+                            <input #y matInput type="password" name="ConfirmPassword" [(ngModel)]="ConfirmPassword"
+                                required #ConfirmPasswordcontrol>
+                            <mat-icon *ngIf="data.Password !== ''" style="color: #ff5100;cursor: pointer;"
+                                (click)="y.type = y.type=='password'?'text':'password'" matSuffix>vpn_key</mat-icon>
                             <mat-error>
                                 Confirm Password is required
                             </mat-error>
@@ -120,9 +145,9 @@
                 </div>
             </div>
             <div class="modal-footer">
-              <button type="button" mat-raised-button color="primary" [disabled]="!f.valid" (click)="UpdatePassword()" >Save</button>
+                <button type="button" mat-raised-button color="primary" [disabled]="!f.valid"
+                    (click)="UpdatePassword()">Update</button>
             </div>
         </form>
     </div>
-  </ng-template>
-
+</ng-template>
