--- a/web/src/app/inventory/fitter-list/fitter-list.component.html
+++ b/web/src/app/inventory/fitter-list/fitter-list.component.html
@@ -1,95 +1,120 @@
 <section class="content">
-    <div class="container-fluid">
-      <div class="block-header">
-        <div class="row clearfix">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
-            <div class="card p-0">
-              <div class="header p-2 py-0 pt-1">
-                <div class="row">
-                  <div class="col-md-1 col-8 p-0 ms-3">
-                    <h2>Fitter List <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button" (click)="exportAsXLSX()"></i></h2>
+  <div class="container-fluid">
+    <div class="block-header">
+      <div class="row clearfix">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
+          <div class="card p-0">
+            <div class="header p-2 py-0 pt-1">
+              <div class="row">
+                <div class="col-md-1 col-8 p-0 ms-3">
+                  <h2>Fitter List <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                      (click)="exportAsXLSX()"></i></h2>
+                </div>
+                <div class="col-md-2 col-1 ps-md-0 ps-1">
+                  <select class=" form-control"
+                    style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                    [(ngModel)]="itemsPerPage" (change)="getList();">
+                    <option [ngValue]="10">Show 10 Row</option>
+                    <option [ngValue]="25">Show 25 Row</option>
+                    <option [ngValue]="50">Show 50 Row</option>
+                    <option [ngValue]="100">Show 100 Row</option>
+                    <option [ngValue]="250">Show 250Row</option>
+                    <option [ngValue]="500">Show 500 Row</option>
+                  </select>
+                </div>
+                <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                  <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                    [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                    (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                  </ngb-pagination>
+                </div>
+                <div class="col-md-2 col-4 ms-auto">
+                  <div class="input-group">
+                    <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
+                      class="form-control" />
                   </div>
-                  <div class="col-md-2 col-1 ps-md-0 ps-1">
-                      <select class=" form-control"
-                          style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
-                          [(ngModel)]="itemsPerPage" (change)="getList();">
-                          <option [ngValue]="10">Show 10 Row</option>
-                          <option [ngValue]="25">Show 25 Row</option>
-                          <option [ngValue]="50">Show 50 Row</option>
-                          <option [ngValue]="100">Show 100 Row</option>
-                          <option [ngValue]="250">Show 250Row</option>
-                          <option [ngValue]="500">Show 500 Row</option>
-                      </select>
-                  </div>
-                  <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
-                      <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
-                          ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
-                          [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
-                          [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
-                      </ngb-pagination>
-                  </div>
-                  <div class="col-md-2 col-4 ms-auto">
-                    <div class="input-group">
-                        <input   placeholder="Search" [(ngModel)]="term" #searching  mdbInput type="search" id="form1" class="form-control" />
-                    </div>
+                </div>
+                <div class="col-md-1 col-1" style="width: 70px;padding: 0;">
+                  <mat-icon class="col-white plus_icon me-1" [routerLink]="['/inventory/fitter',0]"> add</mat-icon>
+                  <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View">grid_on
+                  </mat-icon>
+                </div>
+              </div>
             </div>
-                  <div class="col-md-1 col-1" style="width: 50px">
-                      <mat-icon class="col-white plus_icon" [routerLink]="['/inventory/fitter',0]"
-                          style="float: right;"> add</mat-icon>
-                  </div>
-              </div>
-              </div>
-              <div class="body mt-md-2 mt-5 p-2">
-                <div class="row">
-                  <div class="col-sm-12" style="overflow: auto; height: 530px;">
-                    <div class="table-responsive">
-                      <table class="table table-striped table-hover table-sm table-bordered"
-                        style="border: 2px solid #fff !important;">
-                        <thead>
-                          <tr>
-                            <th class="text-left">Action</th>
-                                    <th class="text-left">S.No</th>
-                                    <th class="text-left">FitterName</th>
-                                    <th class="text-left">MobileNo</th>
-                                    <th class="text-left">MobileNo.2</th>
-                                    <th class="text-left">PhoneNo</th>
-                                    <th class="text-left">Email</th>
-                                    <th class="text-left">Address</th>
-                                    <th class="text-left">DOB</th>
-                                    <th class="text-left">Anniversary</th>
-                                    <th class="text-left">CreatedBy</th>
-                                    <th class="text-left">UpdatedBy</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr class="text-center" *ngFor="let data of dataList let i = index;"
-                            style="white-space: nowrap;">
-                            <td style="width: 7%;">
-                              <mat-icon class="edit_icon ms-1" [routerLink]="['/inventory/fitter',data.ID]">edit</mat-icon>
-                              <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
-                            </td>
-                            <td>{{ dataList.length - i }}</td>
-                            <td class="text-left">{{data.Name}}</td>
-                            <td class="text-left">{{data.MobileNo1}}</td>
-                            <td class="text-left">{{(data.MobileNo2 !== 'null')? data.MobileNo2: ''}}</td>
-                            <td class="text-left">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
-                            <td class="text-left">{{(data.Email !== 'null')? data.Email: ''}}</td>
-                            <td class="text-left">{{data.Address}}</td>
-                            <td class="text-left">{{data.DOB}}</td>
-                            <td class="text-left">{{data.Anniversary}}</td>
-                            <td class="text-left"> {{data.CreatedPerson}} </td>
-                            <td class="text-left"> {{data.UpdatedPerson}} </td>
-                          </tr>
-                        </tbody>
-                      </table>
+            <!-- Grid View start -->
+            <div class="row mt-2 p-2" *ngIf="dataList?.length !== 0 && !gridview" style="overflow:auto;height:530px; ">
+              <div class="col-md-3" *ngFor="let data of dataList let i = index;">
+                <div class="course-card" style="height: 28rem;">
+                  <div class="course-card-body">
+                    <div class="course-card-top-overflow text-white">
+                      <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block cardImg" />
+                    </div>
+                    <h2 class="text-center m-0">{{data.Name}}</h2>
+                    <p class="text-center m-0">{{data.MobileNo1}}</p>
+                    <p class="text-center m-0">{{data.Email}}</p>
+                    <p class="text-center m-0 cardAddress">{{data.Address }}</p>
+                    <div class="text-center mb-3">
+                      <mat-icon class="edit_icon ms-1" [routerLink]="['/inventory/fitter',data.ID]">edit</mat-icon>
+                      <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <!-- Grid View end -->
+            <!-- fitter list start -->
+            <div class="body mt-md-2 mt-5 p-2">
+              <div class="row" *ngIf="gridview">
+                <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                  <div class="table-responsive">
+                    <table class="table table-striped table-hover table-sm table-bordered"
+                      style="border: 2px solid #fff !important;">
+                      <thead>
+                        <tr>
+                          <th class="text-left">Action</th>
+                          <th class="text-left">S.No</th>
+                          <th class="text-left">FitterName</th>
+                          <th class="text-left">MobileNo</th>
+                          <th class="text-left">MobileNo.2</th>
+                          <th class="text-left">PhoneNo</th>
+                          <th class="text-left">Email</th>
+                          <th class="text-left">Address</th>
+                          <th class="text-left">DOB</th>
+                          <th class="text-left">Anniversary</th>
+                          <th class="text-left">CreatedBy</th>
+                          <th class="text-left">UpdatedBy</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr class="text-center" *ngFor="let data of dataList let i = index;"
+                          style="white-space: nowrap;">
+                          <td style="width: 7%;">
+                            <mat-icon class="edit_icon ms-1" [routerLink]="['/inventory/fitter',data.ID]">edit
+                            </mat-icon>
+                            <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                          </td>
+                          <td>{{ dataList.length - i }}</td>
+                          <td class="text-left">{{data.Name}}</td>
+                          <td class="text-left">{{data.MobileNo1}}</td>
+                          <td class="text-left">{{(data.MobileNo2 !== 'null')? data.MobileNo2: ''}}</td>
+                          <td class="text-left">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
+                          <td class="text-left">{{(data.Email !== 'null')? data.Email: ''}}</td>
+                          <td class="text-left">{{data.Address}}</td>
+                          <td class="text-left">{{data.DOB}}</td>
+                          <td class="text-left">{{data.Anniversary}}</td>
+                          <td class="text-left"> {{data.CreatedPerson}} </td>
+                          <td class="text-left"> {{data.UpdatedPerson}} </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- fitter list end -->
           </div>
         </div>
       </div>
     </div>
-  </section>
-  
+  </div>
+</section>
