--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -195,6 +195,26 @@ $OguruPro-theme: mat.define-light-theme((
     font-size: 23px;
 }
 
+.Grid_icon{
+    background: #615be7;
+    color: #fff;
+    padding: 4px;
+    border-radius: 24px;
+    font-size: 22px;
+    height: 30px !important;
+    width: 30px !important;
+    cursor: pointer;
+    transition: .5s;
+    box-shadow: 2px 2px 6px #9c9795fa; 
+    font-weight: 900; 
+}
+
+.Grid_icon:hover{
+    color: #615be7 !important;
+    background: #ffffff;
+    font-size: 23px;
+}
+
 .save_icon{
     background: #3650b4;
     color: #fff;
@@ -498,3 +518,40 @@ $OguruPro-theme: mat.define-light-theme((
     z-index: 99999 !important;
  }
 // ngbModel dorpdowre end in css
+
+//grid card start
+.course-card-body {
+    box-shadow: -1px 1px 9px #c4c4c4a8;
+    border-radius: 10px;
+    height: 425px;
+    transition: .5s;
+}
+
+.course-card-body:hover {
+   transform: scale(.95);
+   box-shadow: -1px 2px 10px #eb582239;
+
+
+}
+
+.cardImg {
+    // padding-top: 3%;
+    // width: 200px;
+    // height: 250px;
+    // object-fit: cover;
+    padding-top: 3%;
+    width: 310px;
+    height: 250px;
+    object-fit: contain;
+}
+
+.cardAddress {
+    text-overflow: ellipsis;
+    width: 350px;
+    padding: 0% 5%;
+    overflow: hidden;
+    height: 60px;
+
+}
+
+//grid card end
