--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -1,6 +1,6 @@
 <body >
 
-  
+
   <div class="navbar">
 <!-- responsive navbar toggle button -->
     <input type="checkbox" id="nav-check">
@@ -15,8 +15,8 @@
     <div class="nav-links">
 <!-- SuperAdmin nav -->
 
-      <a *ngIf="user?.data?.UserGroup === 'SuperAdmin'" [routerLink]="['/admin/adminDashborad']">Dashborad</a>
-      <div *ngIf="user?.data?.UserGroup === 'SuperAdmin'" class="dropdown">
+      <a *ngIf="user?.UserGroup === 'SuperAdmin'" [routerLink]="['/admin/adminDashborad']">Dashborad</a>
+      <div *ngIf="user?.UserGroup === 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 
         <div class="drop-content" id="collapseExample">
@@ -26,10 +26,10 @@
           <a href="javascript:void(0)" [routerLink]="['/admin/deactiveList']"     id="collapseExample">Deactive List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/loginHistory']" id="collapseExample">Login History</a>
         </div>
-        
+
      </div>
 
-      <div *ngIf="user?.data?.UserGroup === 'SuperAdmin'" class="dropdown">
+      <div *ngIf="user?.UserGroup === 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Product Assign <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 
         <div class="drop-content" id="collapseExample">
@@ -42,12 +42,12 @@
 <!-- SuperAdmin end nav-->
 
 <!-- CompanyAdmin start nav-->
-      <a *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/CompanyDashborad']">Dashborad</a>
-      <div *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" class="dropdown">
+      <a *ngIf="user?.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/CompanyDashborad']">Dashborad</a>
+      <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
         <div class="drop-content" id="collapseExample">
-          <a href="javascript:void(0)" [routerLink]="['/admin/company',user.data.CompanyID]" id="collapseExample">Company Info</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/company',user.CompanyID]" id="collapseExample">Company Info</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/employeeList']"                   id="collapseExample">Employee</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/shopList']"                       id="collapseExample">Shop</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/rolePermission']"                       id="collapseExample">Role-Permission</a>
@@ -59,7 +59,7 @@
 
       </div>
 
-      <div *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" class="dropdown">
+      <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Product Assign <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 
         <div class="drop-content" id="collapseExample">
@@ -70,7 +70,7 @@
 
       </div>
 
-      <div *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" class="dropdown">
+      <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Purchasing <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 
         <div class="drop-content" id="collapseExample">
@@ -81,37 +81,38 @@
 
       </div>
 
-      <div *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" class="dropdown">
+      <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Billing <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 
         <div class="drop-content" id="collapseExample">
           <a href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample">Doctor</a>
-         
+
         </div>
 
       </div>
 
-     
+
     </div>
  <!-- CompanyAdmin end nav-->
 
 <!-- SuperAdmin login btn -->
-    <a  *ngIf="user?.data?.UserGroup == 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
+    <a  *ngIf="user?.UserGroup == 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
       <i class="fa-solid fa-right-from-bracket"></i>
     </a>
 <!-- SuperAdmin login btn -->
 
  <!-- companyAdmin or employee login btn -->
- <!-- <div class="SelectYourShop">
+ <div class="SelectYourShop">
   
-  <mat-select name="FieldType"  placeholder="Select Your Shop" [(ngModel)]="selectedShops" (selectionChange)="saveSelectedShop()"  required #Typecontrol>
-    <mat-option *ngFor="let s of dropShoplist let i = index;" [value]="s.ShopID">
+  <mat-select name="selectedShops"  placeholder="Select Your Shop" [(ngModel)]="selectedShops" (selectionChange)="saveSelectedShop()"  required #Typecontrol>
+    <mat-option *ngIf="user?.UserGroup === 'CompanyAdmin'" [value]="0">All</mat-option>
+    <mat-option *ngFor="let s of dropShoplist let i = index;" [value]="s.ID">
         <span style="color: rgb(39, 39, 39); "> {{s.Name}} <span [style.color]="'blue'" *ngIf = "s.AreaName !== 'null'">({{s.AreaName}})</span> <i *ngIf="s.Status == 0" class="fas fa-times" style="color: red;"> </i> </span>
     </mat-option>
   </mat-select>
-      
- </div> -->
- <a  *ngIf="user?.data?.UserGroup != 'SuperAdmin'" class="logoutBtn" (click)="logout()" title="LogOut">
+
+ </div>
+ <a  *ngIf="user?.UserGroup != 'SuperAdmin'" class="logoutBtn" (click)="logout()" title="LogOut">
   <i class="fa-solid fa-right-from-bracket"></i>
 </a>
 
