--- a/web/src/app/common/common.component.css
+++ b/web/src/app/common/common.component.css
@@ -21,7 +21,7 @@
 }
 .navbar .nav-links{
   display: inline;
-  float: right;
+  /* float: right; */
   font-size: 18px;
 }
  
@@ -56,7 +56,8 @@
  
   display: none;
 }
- 
+
+
 @media (max-width:700px) {
   .navbar .nav-btn{
     display: inline-block;
