purchase & company dashboard media qry

--- a/web/src/app/common/login.component.html
+++ b/web/src/app/common/login.component.html
@@ -82,6 +82,8 @@
   <div class="modal-body">
     <div class="row">
       <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
+        <!-- <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block" width="50%" /> -->
+
           <mat-form-field class="example-full-width" appearance="outline">
               <mat-label>Select Shop</mat-label>
               <mat-select name="selectedShop" [(ngModel)]="selectedShop" (selectionChange)="saveSelectedShop()">
