--- a/web/src/app/admin/dashborad.component.css
+++ b/web/src/app/admin/dashborad.component.css
@@ -1,4 +1,4 @@
-.card{
+.card {
   border-left: 5px solid rgb(255, 81, 0);
   box-shadow: 7px 7px 17px #6b6866;
   transition: 1s;
@@ -7,40 +7,47 @@
   animation-duration: 9s;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.233) 0%, rgb(255, 255, 255) 100%);
 }
-.content{
+
+.content {
   background-image: url(../../assets/images/dasss.svg);
 
   background-size: 100%;
 }
-a{
+
+a {
   text-decoration: none;
   color: rgb(69, 69, 69);
 }
-.float-right{
+
+.float-right {
   float: right;
 }
+
 /* @keyframes example {
   from {background-color: rgb(255, 255, 255);}
   to {background-color: rgb(97, 207, 111);}
 } */
-.fa-arrow-right{
-  color:rgb(255, 81, 0)
+.fa-arrow-right {
+  color: rgb(255, 81, 0)
 }
-.crds{
+
+.crds {
   padding: 0% 2%;
 }
-.hoc{
+
+.hoc {
   color: rgb(69, 69, 69);
 }
-.card:hover{
 
- transform: scale(0.9); 
- box-shadow: 5px 5px 10px #de5c04;
- border: 2px solid #f37623;
+.card:hover {
+
+  transform: scale(0.9);
+  box-shadow: 5px 5px 10px #de5c04;
+  border: 2px solid #f37623;
 }
 
 .cards {
-  background: linear-gradient(90deg, rgba(255,89,0,0.8354692218684349) 0%, rgba(10,22,110,0.7094188017003676) 100%);
+  background: linear-gradient(90deg, rgba(255, 89, 0, 0.8354692218684349) 0%, rgba(10, 22, 110, 0.7094188017003676) 100%);
   border-radius: 10px;
   border: none;
   position: relative;
@@ -67,46 +74,77 @@ a{
   100% {  width: 100%; height: 100vh;}
 } */
 
-.c1{
-    animation: bbb 2s linear infinite;
+.c1 {
+  animation: bbb 2s linear infinite;
 }
 
 @keyframes bbb {
-  0%   { transform: translateY(0)}
-  50%   { transform: translateY(-20px); ; color: red;}
-  100% { transform: translateY(0);}
+  0% {
+    transform: translateY(0)
+  }
+
+  50% {
+    transform: translateY(-20px);
+    ;
+    color: red;
+  }
+
+  100% {
+    transform: translateY(0);
+  }
 }
 
-.c1:nth-child(1){
-    animation-delay: .2s;
-  
+.c1:nth-child(1) {
+  animation-delay: .2s;
+
 }
 
-.c1:nth-child(2){
+.c1:nth-child(2) {
   animation-delay: .4s;
- 
+
 }
 
-.c1:nth-child(3){
+.c1:nth-child(3) {
   animation-delay: .6s;
 
 }
 
-.c1:nth-child(4){
-animation-delay: .2s;
+.c1:nth-child(4) {
+  animation-delay: .2s;
 
 }
 
-.c1:nth-child(5){
+.c1:nth-child(5) {
   animation-delay: .4s
+}
+
+.c1:nth-child(6) {
+  animation-delay: .6s;
 
 }
 
-.c1:nth-child(6){
-animation-delay: .6s;
-
+.cardName {
+  font-size: 21px;
+  font-weight: 600;
+  margin-top: 5%;
 }
 
+.p-4 {
+  padding: 1.5rem !important;
+}
 
+@media screen and (max-width: 1500px) and (min-width: 1200px) {
+  .cardName {
+    font-size: 17px;
+  }
 
+  .card {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 
+  }
+
+  .p-4 {
+    padding: .7rem !important;
+  }
+}
