--- a/web/src/app/admin/dashborad.component.html
+++ b/web/src/app/admin/dashborad.component.html
@@ -6,8 +6,8 @@
                     <div class="card ">
                         <div class=" p-4">
                             <img src="assets/images/customer.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right name"
-                                style="font-size:25px;font-weight:600;margin-top:5%;">Customer</span>
+                            <span class="ml-auto float-right name cardName"
+                               >Customer</span>
                         </div>
                         <div class="body p-3 text-center">
                             <a href="javascript:void(0)" [routerLink]="['/sale/customer', 0]">
@@ -22,7 +22,7 @@
                     <div class="card">
                         <div class=" p-4">
                             <img src="assets/images/billing.png" class="float-left" alt="" width="60" height="60"> <span
-                                class="ml-auto float-right" style="font-size:25px;font-weight:600;margin-top:5%;">
+                                class="ml-auto float-right cardName" >
                                 Billing Search </span>
                         </div>
                         <div class="body p-3 text-center">
@@ -38,8 +38,8 @@
                     <div class="card">
                         <div class=" p-4">
                             <img src="assets/images/supp.png" class="float-left" alt="" width="60" height="60"> <span
-                                class="ml-auto float-right"
-                                style="font-size:25px;font-weight:600;margin-top:5%;">Supplier </span>
+                                class="ml-auto float-right cardName"
+                                >Supplier </span>
                         </div>
                         <div class="body p-3 text-center">
                             <a href="javascript:void(0)" [routerLink]="['/inventory/supplier',0]">
@@ -54,7 +54,7 @@
                     <div class="card">
                         <div class=" p-4 ">
                             <img src="assets/images/purchase.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right" style="font-size:25px;font-weight:600;margin-top:5%;">
+                            <span class="ml-auto float-right cardName">
                                 Purchase </span>
                         </div>
                         <div class="body p-3 text-center">
@@ -70,7 +70,7 @@
                     <div class="card">
                         <div class=" p-4 ">
                             <img src="assets/images/transfer.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right" style="font-size:22px;font-weight:600;margin-top:5%;">
+                            <span class="ml-auto float-right cardName">
                                 Product Transfer </span>
                         </div>
                         <div class="body p-3 text-center">
@@ -86,8 +86,8 @@
                     <div class="card">
                         <div class=" p-4">
                             <img src="assets/images/sms-removebg-preview.png" class="float-left" alt="" width="60"
-                                height="60"> <span class="ml-auto float-right"
-                                style="font-size:25px;font-weight:600;margin-top:5%;">Message</span>
+                                height="60"> <span class="ml-auto float-right cardName"
+                                >Message</span>
                         </div>
                         <div class="body p-3 text-center">
                             <a href="javascript:void(0)" routerLink="/admin/messageSetting">
@@ -102,8 +102,8 @@
                     <div class="card">
                         <div class=" p-4">
                             <img src="assets/images/expense.png" class="float-left" alt="" width="60" height="60"> <span
-                                class="ml-auto float-right"
-                                style="font-size:25px;font-weight:600;margin-top:5%;">Expense </span>
+                                class="ml-auto float-right cardName"
+                               >Expense </span>
                         </div>
                         <div class="body p-3 text-center">
                             <a href="javascript:void(0)" routerLink="/companypay/expense/0">
@@ -118,8 +118,8 @@
                     <div class="card">
                         <div class=" p-4">
                             <img src="assets/images/search-product.png" class="float-left" alt="" width="60"
-                                height="60"> <span class="ml-auto float-right"
-                                style="font-size:21px;font-weight:600;margin-top:5%;"> Product Search </span>
+                                height="60"> <span class="ml-auto float-right cardName"
+                               > Product Search </span>
                         </div>
                         <div class="body p-3 text-center">
                             <a href="javascript:void(0)" routerLink="/prodservice/productManage">
