--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -1,1 +1,76 @@
-<p>purchase works!</p>
+
+<section class="content">
+    <div class="container-fluid">
+        <div class="block-header"> </div>
+        <div class="row clearfix">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
+                <div class="card">
+                    <div class="header">
+                        <h2>Purchase Info </h2>
+                    </div>
+                    <div class="body">
+                        <!-- save fitter start -->
+                        <form  #f="ngForm" autocomplete="off" >
+                            <div class="row">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Supplier Name</mat-label>
+                                        <mat-select name="Supplier" editable="true" [(ngModel)]="selectedPurchaseMaster.SupplierName" required #singleSelect  [disabled]="selectedPurchaseMaster.ID !== null" appAutoFoucsDirectives>
+                                            <mat-option>
+                                                
+                                            </mat-option>
+                                            <mat-option *ngFor="let sup of supplierList let i = index;" [value]="sup.Name">
+                                                {{sup.Name}}
+                                            </mat-option>
+                                        </mat-select>
+                                        <mat-error>
+                                            Select Supplier
+                                        </mat-error>
+                                    </mat-form-field>
+                                    
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0" >
+                                        <mat-label>Invoice Number</mat-label>
+                                        <input matInput name="InvoiceNo" [(ngModel)]="selectedPurchaseMaster.InvoiceNo" (ngModelChange)="selectedPurchaseMaster.InvoiceNo = onChange($event)" required #InvoiceNumbercontrol >
+                                        <mat-error>
+                                            Supplier Invoice No is required
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0" >
+                                        <mat-label>Invoice Date</mat-label>
+                                        <input matInput name="InvoiceDate" type="date" [(ngModel)]="selectedPurchaseMaster.PurchaseDate" required #InvoiceDatecontrol>
+                                        <mat-error>
+                                            Invoice date is required
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                               
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Entry Type</mat-label>
+                                        <mat-select name="Category" [(ngModel)]="category" required #Typecontrol>
+                                            <mat-option value="Product">Product</mat-option>
+                                            <mat-option value="Charges">Charges</mat-option>
+                                        </mat-select>
+                                        <mat-error>
+                                            Select Entry Type
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                               
+                                
+                            </div>
+                           
+                        </form>
+                        <!-- save fitter end -->
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
